<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="clear_history">Clear history</string>
    <string name="history_cleared">History cleared</string>
    <string name="title_map">Map</string>
    <string name="title_history">History</string>
    <string name="locate">Locate me</string>
    <string name="change_language">ქართული</string>
    <string name="title_info">Info</string>
    <string name="info_uri">file:///android_asset/info/index.html</string>
    <string name="search">Search</string>
    <string name="search_hint">Name or ID</string>
    <string name="service_url">http://transiten.ttc.com.ge/pts-portal-services/servlet/stopArrivalTimesServlet</string>
    <string name="schedule">Schedule</string>
    <string name="loading">Loading</string>
    <string name="refresh">Refresh</string>
    <string name="no_data">No data</string>
    <string name="error">Error retrieving data</string>
    <string name="favorite">Favorite</string>
    <string name="title_favorites">Favorites</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="favorites_cleared">Favorites cleared</string>
    <string name="time_format">%dm</string>
</resources>
