<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_map"
            android:checked="true"
            android:icon="@drawable/ic_map"
            android:title="@string/title_map"/>
        <item
            android:id="@+id/drawer_favorites"
            android:icon="@drawable/ic_favorite_white_36dp"
            android:title="@string/title_favorites"/>
        <item
            android:id="@+id/drawer_history"
            android:icon="@drawable/ic_history"
            android:title="@string/title_history"/>
        <item
            android:id="@+id/drawer_search"
            android:icon="@drawable/ic_search"
            android:checkable="false"
            android:title="@string/search"/>
        <item
            android:id="@+id/drawer_info"
            android:icon="@drawable/ic_info"
            android:title="@string/title_info"/>
        <item
            android:id="@+id/drawer_language"
            android:checkable="false"
            android:icon="@drawable/ic_language"
            android:title="@string/change_language"/>
    </group>
</menu>